--- a/gcp/gatekeeper.yaml
+++ b/gcp/gatekeeper.yaml
@@ -66,6 +66,7 @@ metadata:
     cert-manager.io/issuer: letsencrypt
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
     #nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:  
   rules:
