--- a/gcp/gatekeeper.yaml
+++ b/gcp/gatekeeper.yaml
@@ -69,6 +69,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
     nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 1m
+    nginx.ingress.kubernetes.io/client_max_body_size: 1m
     #nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:  
   rules:
