--- a/gcp/gatekeeper.yaml
+++ b/gcp/gatekeeper.yaml
@@ -22,11 +22,11 @@ spec:
           ports:
             - containerPort: 3000
           args:
-            - --discovery-url=https://fleet.nebulae.com.co/auth/realms/DEVICES
-            - --client-id=devices2
-            - --client-secret=b73479a3-225b-4b96-ad65-22edd82623a3
+            - --discovery-url=https://sibus.ambq.gov.co/auth/realms/DEVICES
+            - --client-id=devices
+            - --client-secret=985d96f0-2d5e-487f-8a8a-550cd4616751
             - --listen=0.0.0.0:3000
-            - --redirection-url=https://fleet.nebulae.com.co
+            - --redirection-url=https://sibus.ambq.gov.co
             - --enable-refresh-tokens=true
             - --encryption-key=AgXa7xRcoClDEU0ZDSH4X0XhL5Qy2Z2k
             - --upstream-url=http://updatevoc-svc.default.svc.cluster.local:8000
@@ -58,38 +58,45 @@ spec:
   selector:
     app: gatekeeper
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-updatevoc
-  namespace: default
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: letsencrypt
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
+    certmanager.k8s.io/issuer: letsencrypt
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
-    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-body-size: 32m
     nginx.ingress.kubernetes.io/client_max_body_size: 32m
-    #nginx.ingress.kubernetes.io/rewrite-target: /$2
-spec:  
+  name: ingress-updatevoc
+  namespace: default
+spec:
   rules:
-  - host: fleet.nebulae.com.co
+  - host: sibus.ambq.gov.co
     http:
-      paths:  
+      paths:
       - path: /updatevoc
         backend:
-          serviceName: gatekeeper
-          servicePort: 3000
+          service:
+            name: gatekeeper
+            port:
+              number: 3000
+        pathType: ImplementationSpecific
       - path: /oauth
         backend:
-          serviceName: gatekeeper
-          servicePort: 3000
+          service:
+            name: gatekeeper
+            port:
+              number: 3000
+        pathType: ImplementationSpecific
       - path: /static
         backend:
-          serviceName: gatekeeper
-          servicePort: 3000
+          service:
+            name: gatekeeper
+            port:
+              number: 3000
+        pathType: ImplementationSpecific
   tls:
-      - hosts:
-        - fleet.nebulae.com.co
-        secretName: tls-keycloak
+  - hosts:
+    - sibus.ambq.gov.co
+    secretName: tls-main
